# War.v2

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  build.sh  index.html  vercel.json
scripts/: build-web.sh
src/: lib.rs  main.rs
