[package]
name = "war_v2"
version = "0.1.0"
edition = "2021"
description = "Low-poly WW1 era 3D RPG strategy battlefield simulator built with Bevy for web deployment."
license = "MIT"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
bevy = { version = "0.14", default-features = false, features = [
  "bevy_asset",
  "bevy_scene",
  "bevy_winit",
  "bevy_render",
  "bevy_core_pipeline",
  "bevy_pbr",
  "bevy_gltf",
  "bevy_ui",
  "bevy_text",
  "bevy_sprite",
  "png",
  "ktx2",
  "zstd",
  "tonemapping_luts",
  "webgl2"
] }
rand = "0.8"
getrandom = { version = "0.2", features = ["js"] }
wasm-bindgen = "0.2"

[profile.release]
opt-level = "z"
lto = "thin"
codegen-units = 1
